HUE-6837 [frontend] Fix alignment of hueCheckbox and hueCheckAll icons
(cherry picked from commit dd6772c33dc5dc5f1158a37c85ce0640e92d4a04)

--- a/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
+++ b/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
@@ -38,6 +38,10 @@
 }
 
 .jobbrowser-components {
+  .hue-uncheck::before {
+    padding-left: 2px;
+  }
+
   .tab-content {
     padding: 10px;
     border: none !important;
